upgrade kotlin/java