@@ -1,7 +1,7 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.8.21'
+    id 'org.jetbrains.kotlin.jvm' version '2.1.21'
     id 'java'
-    id "io.freefair.lombok" version "8.0.1"
+    id "io.freefair.lombok" version "8.10.2"
     id "maven-publish"
 }
 
@@ -27,8 +27,22 @@ test {
 
 java {
     javaToolchains {
-        version = JavaLanguageVersion.of(19)
+        version = JavaLanguageVersion.of(21)
     }
+}
+
+kotlin {
+    compilerOptions {
+        jvmTarget = org.jetbrains.kotlin.gradle.dsl.JvmTarget.JVM_21
+    }
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += '--enable-preview'
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += '--enable-preview'
 }
 
 publishing {
